--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -49,3 +49,41 @@
 // Utilities
 @import "utilities/api";
 // scss-docs-end import-stack
+
+
+.brand-text-icon{
+  font-size: 26px;
+  font-weight: 500;
+  font-family: "poppins", sans-serif;
+  color: $primary;
+}
+
+header{
+  border-bottom: 1px solid $gray-200;
+  width: 100%;
+  position: relative;
+
+  .navbar {
+    height: 80px;
+
+    .navbar-nav{
+      li.nav-item {
+        &.active{
+          a.nav-link{
+            color: $primary;
+          }
+        }
+        a{
+          a.nav-link{
+            color: $gray-900;
+            padding-left: 1rem;
+            padding-right: 1rem;
+             &:hover{
+              text-decoration: underline;
+             }
+          }
+        }
+      }
+    }
+  }
+}
